Added a console to scrape recursively, a commander to save S3 objects to database, and a  search engine web project.

--- a/Scannect/appsettings.json
+++ b/Scannect/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Scannect-66E3A843-DEDD-4D96-8FE2-5D0DE0E78190;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Scannect-66E3A843-DEDD-4D96-8FE2-5D0DE0E78190;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DataConnection": "Server=(localdb)\\mssqllocaldb;Database=ScannectDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
